[gd_scene load_steps=6 format=3 uid="uid://de4g6bt8oy5ts"]

[ext_resource type="Script" uid="uid://btwfvgdrh6dyj" path="res://effects/space_background.gd" id="1_5bor5"]
[ext_resource type="Texture2D" uid="uid://dj7mk2bqxhpes" path="res://assets/background/space_background.png" id="2_5bor5"]
[ext_resource type="Texture2D" uid="uid://b2pppt12i20ds" path="res://assets/background/space_middleground.png" id="3_240k4"]
[ext_resource type="Texture2D" uid="uid://dghg6bmb2wdhd" path="res://assets/background/space_foreground.png" id="4_eofjb"]
[ext_resource type="AudioStream" uid="uid://dh0suul1uhnyc" path="res://sounds/space_background_music.mp3" id="5_240k4"]

[node name="SpaceBackground" type="ParallaxBackground"]
visible = false
script = ExtResource("1_5bor5")

[node name="SpaceBackgroundLayer" type="ParallaxLayer" parent="."]
motion_mirroring = Vector2(0, 960)

[node name="SpaceBackground" type="TextureRect" parent="SpaceBackgroundLayer"]
offset_right = 160.0
offset_bottom = 480.0
texture = ExtResource("2_5bor5")
stretch_mode = 1

[node name="SpaceMiddlegroundLayer" type="ParallaxLayer" parent="."]
motion_mirroring = Vector2(0, 240)

[node name="SpaceMiddleground" type="TextureRect" parent="SpaceMiddlegroundLayer"]
offset_right = 160.0
offset_bottom = 240.0
texture = ExtResource("3_240k4")
stretch_mode = 1

[node name="StarsForegroundLayer" type="ParallaxLayer" parent="."]
motion_mirroring = Vector2(0, 240)

[node name="SpaceForeground" type="TextureRect" parent="StarsForegroundLayer"]
offset_right = 160.0
offset_bottom = 240.0
texture = ExtResource("4_eofjb")
stretch_mode = 4

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("5_240k4")
bus = &"Music"
parameters/looping = true
